--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+.mat-radio-button.mat-accent .mat-radio-inner-circle, .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element:not(.mat-radio-persistent-ripple), .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-persistent-ripple, .mat-radio-button.mat-accent:active .mat-radio-persistent-ripple
+    background-color: #7B1FA2
+
+.mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle
+    border-color: #7B1FA2
+
+.mat-dialog-container
+    background: #908c8f
+
+.mat-button.mat-primary, .mat-icon-button.mat-primary, .mat-stroked-button.mat-primary
+    color: #7B1FA2
+
+.mat-input-element
+    border-bottom-color:#7B1FA2
+
+.mat-table, .mat-paginator-container
+     background: #908c8f
+     
+.mat-sort-header-content
+    color: #fff
+    font-weight: bold
+
+.th.mat-header-cell:last-of-type
+    padding-right: 0px
